--- a/Portfolio/task/src/main.css
+++ b/Portfolio/task/src/main.css
@@ -3,15 +3,19 @@
 body {
     margin: 0;
     display: flex;
-    flex-flow: column;font-family: 'Poppins', sans-serif;
+    flex-flow: column;
+    font-family: 'Poppins', sans-serif;
 }
 
 header {
-    height: 50vh;
+
     background-image: url("header.webp");
     background-size: cover;
     display: flex;
     flex-flow: column;
+    justify-content: space-between;
+    height: 30vh;
+    position: relative;
 }
 
 nav {
@@ -21,7 +25,7 @@ nav {
 
 .nav, .home-link {
     color: sandybrown;
-    font-size: 3vh;
+    font-size: 2.5vh;
     text-decoration: none;
     margin-left: 3vh;
     padding: 2vh;
@@ -32,10 +36,138 @@ nav {
     color: black;
 }
 
+.hamburger-icon {
+    visibility: hidden;
+}
+
+.hamburger {
+    visibility: hidden;
+    position: absolute;
+}
+
 h1 {
-    display: inline-flex;
     color: aliceblue;
-    justify-self: flex-end;
-    justify-self: end;
-    margin-left: 5vh;
+    margin-left: 3vh;
+    font-size: 4vh;
+}
+
+#about {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 7vh;
+}
+
+img {
+    width: auto;
+    height: 25vh;
+    z-index: 1;
+}
+
+footer {
+    height: 12vh;
+    background-color: saddlebrown;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 2vh;
+}
+
+footer p {
+    color: sandybrown;
+    font-size: 2.5vh;
+}
+
+#portfolio, #contacts {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2vh;
+    margin-bottom: 1vh;
+}
+
+.icons img {
+    height: 3vh;
+}
+
+.projects {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.project {
+    position: relative;
+    width: 500px;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    background-color: white;
+    margin-bottom: 1vh;
+
+}
+
+.open-window {
+    height: 50px;
+    font-size: 25px;
+    z-index: 2;
+}
+
+.window {
+    position: absolute;
+    top: 40px;
+    background-color: white;
+    display: flex;
+    flex-flow: column;
+    z-index: -1;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 5%;
+    width: 50%;
+    padding: 1vh;
+}
+
+.close {
+    height: 50px;
+    font-size: 25px;
+}
+
+@media (max-width: 768px) {
+    .nav-desktop {
+        display: none;
+    }
+    .hamburger-icon {
+        visibility: visible;
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        width: 64px;
+        height: 64px;
+        background-image: url("menu.png");
+        background-size: contain;
+        z-index: 2;
+    }
+
+    .hamburger-icon-opened {
+        background-image: url("menu-opened.png");
+    }
+    .hamburger {
+        top: 74px;
+        right: 20px;
+        flex-direction: column;
+        background-color: white;
+    }
+    .hamburger-visible {
+        visibility: visible;
+    }
+
+    .hamburger-menu-item {
+        font-size: 25px;
+        color: black;
+        text-decoration: none;
+
+    }
 }
